Refactoriza codigo en componentes

--- a/src/style.css
+++ b/src/style.css
@@ -25,7 +25,7 @@ h5{
     background-color: rgba(151, 181, 209, 1);   
 }
 
-#root{
+#rootElement {
     height: 200px;
     width: 900px;
     display: flex;
@@ -37,16 +37,18 @@ h5{
     justify-content: space-between;
 }
 
-img{
-    height: 120px;
+.showCards{
+    display: flexbox;
+    align-content: center;
+}
+ 
+.imgTecnology {
+    height: 100px;
     width: 100px;
     margin-bottom: 5px;
     margin-left: 10px;
-    border: 1.5px; 
+    border-radius: 1.5px; 
     justify-content: space-between 2px;
-    background-color:rgba(188, 209, 232, 1) ; 
+    background-color:rgba(188, 209, 232, 1) ;   
 }
-
- 
-
 
