--- a/src/style.css
+++ b/src/style.css
@@ -57,3 +57,8 @@ h5{
     justify-content: space-between 2px; 
 }
 
+.viewCardsActive:hover{
+    transform: scale(1.10);
+    box-shadow: 0 0 40px -10px rgba(0,0,0,0.25) ;
+}
+
