--- a/src/style.css
+++ b/src/style.css
@@ -1,20 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@500&display=swap');
 body{
     background-color: rgba(67, 88, 201, 1);
 }
 
-#description{
+.description{
     margin-left: 30px;
 }
 
-h2{
+.insertTitle{
+    font-family: 'Noto Sans Mono';
     color: black;
 }
 
-h4{
+.instructions{
+    font-family: 'Noto Sans Mono';
     color: rgba(44, 12, 75, 1);
 }
 
 h5{
+    font-family: 'Noto Sans Mono';
     text-align-last: center;
     color: rgba(3, 38, 221, 1);
     width: 110px;
@@ -25,10 +29,15 @@ h5{
     background-color: rgba(151, 181, 209, 1);   
 }
 
+.startBtn{
+    font-family: 'Noto Sans Mono';
+    color:rgba(66, 32, 139, 1);
+}
+
 .showCards {
     height: 400px;
     width: 400px;
-    display: flex;
+    display: inline-flex;
     margin: 30px;
     flex-wrap: wrap;
     position: relative;
@@ -38,8 +47,10 @@ h5{
 }
  
 .imgTecnology {
-    height: 90px;
-    width: 90px;
+    border: 1.5px solid;
+    border-color: whitesmoke;
+    height: 85px;
+    width: 85px;
     margin-bottom: 5px;
     margin-left: 10px;
     border-radius: 1.5px; 
@@ -49,8 +60,8 @@ h5{
 
 .imgBack{
     display: none;
-    height: 90px;
-    width: 90px;
+    height: 85px;
+    width: 85px;
     margin-bottom: 5px;
     margin-left: 10px;
     border-radius: 1.5px; 
@@ -61,4 +72,17 @@ h5{
     transform: scale(1.10);
     box-shadow: 0 0 40px -10px rgba(0,0,0,0.25) ;
 }
+
+.disabledCard img{
+    filter: opacity(20%);
+}
+
+.infoTools{
+    border-color: grey;
+    border-radius: 10px;
+    height: 400px;
+    width: 400px;
+    display: inline-flex;
+}
+
 
