--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,7 @@ body{
 
 .description{
     margin-left: 30px;
+    display: block;
 }
 
 .insertTitle{
@@ -42,7 +43,7 @@ h5{
     flex-wrap: wrap;
     position: relative;
     align-content: center;
-    display: -webkit-inline-flex;
+    display: inline-flex;
     justify-content: space-between;
 }
  
@@ -77,12 +78,10 @@ h5{
     filter: opacity(20%);
 }
 
-.infoTools{
+.showResults{
     border-color: grey;
     border-radius: 10px;
-    height: 400px;
-    width: 400px;
-    display: inline-flex;
+    display: inline-block;
 }
 
 
